force-app/main/default/objects/Lead/fields/Date_Migrated__c.field-meta.xml
<CustomField>
    <fullName>Date_Migrated__c</fullName>
    <description>Indicates when the record was migrated into the system.</description>
    <inlineHelpText>Indicates when the record was migrated into the system.</inlineHelpText>
    <label>Date Migrated</label>
    <type>Date</type>
</CustomField>