force-app/main/default/objects/Lead/fields/DonorId__c.field-meta.xml
<CustomField>
    <fullName>DonorId__c</fullName>
    <description>The external PK for donors in the BECS/NexLynk systems.</description>
    <externalId>true</externalId>
    <inlineHelpText>The external PK for donors in the BECS/NexLynk systems.</inlineHelpText>
    <label>Donor Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>