force-app/main/default/objects/Lead/fields/Email_Verification_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Email_Verification_Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Email Verification Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>