force-app/main/default/objects/Lead/fields/Email_Verification_Code__c.field-meta.xml
<CustomField>
    <fullName>Email_Verification_Code__c</fullName>
    <label>Email Verification Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>