force-app/main/default/objects/Lead/fields/isEmailVerified__c.field-meta.xml
<CustomField>
    <fullName>isEmailVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has email address been verified?</description>
    <label>Email Verified?</label>
    <type>Checkbox</type>
</CustomField>