force-app/main/default/objects/Lead/fields/isSMSVerified__c.field-meta.xml
<CustomField>
    <fullName>isSMSVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If cellphone number was verified</description>
    <label>SMS Verified?</label>
    <type>Checkbox</type>
</CustomField>