force-app/main/default/objects/Lead/fields/Last_Used_Center__c.field-meta.xml
<CustomField>
    <fullName>Last_Used_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Used Center</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>