force-app/main/default/objects/Lead/fields/SMS_Verification_Attempts__c.field-meta.xml
<CustomField>
    <fullName>SMS_Verification_Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>SMS Verification Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>