force-app/main/default/objects/Lead/fields/SMS_Verification_Code__c.field-meta.xml
<CustomField>
    <fullName>SMS_Verification_Code__c</fullName>
    <label>SMS Verification Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>