force-app/main/default/objects/Lead/fields/SMS_Verification_Codes_Sent__c.field-meta.xml
<CustomField>
    <fullName>SMS_Verification_Codes_Sent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>SMS Verification Codes Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>